Upgraded Java to 21. Upgraded all dependencies. Upgraded Selenium not to use driver files but Chrome and Gecko Driver Services, thus eliminating the need to manually update driver files.